tried to change favicon

--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "start": "node server.js"
   },
   "keywords": [
-    "music",
-    "player",
-    "spotify",
-    "jukebox",
+    "driver",
+    "driving school",
+    "lessons",
+    "driving lessons",
     "awesome",
-    "nostalgic",
-    "xD",
-    "hehe",
-    "xd"
+    "easy",
+    "step by step",
+    "first try",
+    "spam"
   ],
   "author": "Steven Magadan",
   "license": "MIT",
