--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "path": "^0.12.7",
-    "request": "^2.73.0",
-    "spotify-web-api-node": "^2.3.2"
+    "request": "^2.73.0"
   }
 }
